--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>Jose K James</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -42,11 +42,49 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        Hey there! Welcome to my little corner on the internet – glad you found it!
       </p>
+      
+      <p>
+        I’m an engineer turned (hopefully successful) entrepreneur, creator, and speaker. 
+        I’m someone who loves experimenting with all kinds of things and is curious about everything on this planet – and beyond.
+        Alongside all that, I keep busy creating, speaking, and building things that excite me.
+      </p>
+      
+      <p>
+        A bit of a tech geek here.  
+        I used to build apps with Flutter, which eventually led me to host workshops and mentor folks across different states.  
+        If it’s got something to do with tech, business, or psychology, I’m in.  
+        Honestly, I’m one of those people who’s curious about nearly everything, from anything to Quantum Mechanics.
+      </p>
+      
+      <p>
+        Every stage of my life seems to go something like this:
+      </p>
+      
+      <ol>
+        <li>Find something fascinating.</li>
+        <li>Dive deep and grind to master it.</li>
+        <li>Repeat.</li>
+      </ol>
+      
+      <p>
+        Right now, I’m fully in the “entrepreneurship” phase.  
+        I skipped placements to jump into this world – all in :&gt;
+      </p>
+      
+      <p>
+        When I’m not working, you’ll probably find me traveling, meeting new people, or overthinking some random complex stuff.
+      </p>
+      
+      <p>
+        Oh, and one thing: Don’t take life and my advice/perspective too seriously. 😉
+      </p>
+      
+      <p>
+        Got questions about starting your own thing, content creation, app development, or just want to chat? Hit me up!
+      </p>
+      
       <p>
         Read the blog posts or check
         <LinkButton
