--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,15 +47,15 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       
       <p>
         I’m an engineer turned (hopefully successful) entrepreneur, creator, and speaker. 
-        I’m someone who loves experimenting with all kinds of things and is curious about everything on this planet – and beyond.
+        <br>I’m someone who loves experimenting with all kinds of things and is curious about everything on this planet – and beyond.
         Alongside all that, I keep busy creating, speaking, and building things that excite me.
       </p>
       
       <p>
-        A bit of a tech geek here.  
+        A bit of a tech geek here.  <br>
         I used to build apps with Flutter, which eventually led me to host workshops and mentor folks across different states.  
-        If it’s got something to do with tech, business, or psychology, I’m in.  
-        Honestly, I’m one of those people who’s curious about nearly everything, from anything to Quantum Mechanics.
+        
+        <!-- I’m one of those people who’s curious about nearly everything, from anything to Quantum Mechanics. -->
       </p>
       
       <p>
