--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,11 +65,12 @@ const { activeNav } = Astro.props;
               Tags
             </a>
           </li>
-          <li>
+          <!-- <li>
+            TODO changed link to about page
             <a href="/about/" class={activeNav === "about" ? "active" : ""}>
               About
             </a>
-          </li>
+          </li> -->
           {
             SITE.showArchives && (
               <li>
