--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>About Me</h1>
+      <h1>Hey there👋</h1>
       <!-- <a
         target="_blank"
         href="/rss.xml"
@@ -42,7 +42,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a> -->
 
       <p>
-        Hey there! Welcome to my little corner on the internet – glad you found it!
+        Welcome to my little corner on the internet – glad you found it!
       </p>
       
       <p>
