--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,12 +65,15 @@ const { activeNav } = Astro.props;
               Tags
             </a>
           </li>
-          <!-- <li>
-            TODO changed link to about page
-            <a href="/about/" class={activeNav === "about" ? "active" : ""}>
+          <li>
+            <!-- TODO changed link to about page -->
+            <a
+              href="https://linktr.ee/josekjames"
+              class={activeNav === "about" ? "active" : ""}
+            >
               About
             </a>
-          </li> -->
+          </li>
           {
             SITE.showArchives && (
               <li>
