add bmc to socials

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </p>
       
       <p>
-        I’m an engineer turned (hopefully successful) entrepreneur, creator, and speaker. 
+        I’m an engineer turned entrepreneur(hopefully), creator, and speaker. 
         <br>I’m someone who loves experimenting with all kinds of things and is curious about everything on this planet – and beyond.
         Alongside all that, I keep busy creating, speaking, and building things that excite me.
       </p>
