--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import { LOCALE, SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
+import BuyMeCoffee from "@components/BuyMeCoffee.astro";  // Add this import
+
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -138,5 +140,6 @@ const structuredData = {
   </head>
   <body>
     <slot />
+    <BuyMeCoffee />
   </body>
 </html>
