--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,20 +14,21 @@ const { activeNav } = Astro.props;
   <a id="skip-to-content" href="#main-content">Skip to content</a>
   <div class="nav-container">
     <div class="top-nav-wrap">
-      <a href="/" class="logo whitespace-nowrap">
-        {
-          LOGO_IMAGE.enable ? (
-            <img
-              src={`/assets/${LOGO_IMAGE.svg ? "logo.svg" : "logo.png"}`}
-              alt={SITE.title}
-              width={LOGO_IMAGE.width}
-              height={LOGO_IMAGE.height}
-            />
-          ) : (
-            SITE.title
-          )
-        }
+      <a href="/" class="logo whitespace-nowrap flex items-center space-x-1.5">
+        {LOGO_IMAGE.enable ? (
+          <img
+            src={`/${LOGO_IMAGE.svg ? "favicon.svg" : "logo.png"}`}
+            alt={SITE.title}
+            width={LOGO_IMAGE.width}
+            height={LOGO_IMAGE.height}
+            class="logo-image"
+          />
+        ) : (
+          <span class="logo-title">{SITE.title}</span>
+        )}
+        <span class="logo-title">{SITE.title}</span> {/* This will display the title next to the logo */}
       </a>
+      
       <nav id="nav-menu">
         <button
           class="hamburger-menu focus-outline"
