--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -72,7 +72,7 @@ const { activeNav } = Astro.props;
           <li>
             <!-- TODO changed link to about page -->
             <a
-              href="https://linktr.ee/josekjames"
+              href="https://bento.me/josekjames"
               class={activeNav === "about" ? "active" : ""}
             >
               Socials
