--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,7 +74,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </p>
 
       <p>
-        When I’m not working, you’ll probably find me traveling, meeting new
+        When I’m not working, you’ll probably find me travelling, meeting new
         people, or overthinking some random complex stuff.
       </p>
 
