--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import { LOCALE, SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
 import BuyMeCoffee from "@components/BuyMeCoffee.astro";  // Add this import
+import { Analytics } from '@vercel/analytics/next';
+
 
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
@@ -141,5 +143,6 @@ const structuredData = {
   <body>
     <slot />
     <BuyMeCoffee />
+    <Analytics />
   </body>
 </html>
