--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import { LOCALE, SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
 import BuyMeCoffee from "@components/BuyMeCoffee.astro";  // Add this import
-import { Analytics } from '@vercel/analytics/next';
+// import { Analytics } from '@vercel/analytics/next';
 
 
 
@@ -143,6 +143,6 @@ const structuredData = {
   <body>
     <slot />
     <BuyMeCoffee />
-    <Analytics />
+    <!-- <Analytics /> -->
   </body>
 </html>
