--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -139,6 +139,7 @@ const structuredData = {
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js" async></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="174e28ec-6d2f-493c-b7df-d0655490acee"></script>
   </head>
   <body>
     <slot />
