seo fix and favicon

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const { activeNav } = Astro.props;
         {
           LOGO_IMAGE.enable ? (
             <img
-              src={`/${LOGO_IMAGE.svg ? "favicon.svg" : "logo.png"}`}
+              src="/favicon/favicon.svg"
               alt={SITE.title}
               width={LOGO_IMAGE.width}
               height={LOGO_IMAGE.height}
