--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,8 +40,12 @@ const structuredData = {
   "@type": "BlogPosting",
   headline: `${title}`,
   image: `${socialImageURL}`,
-  datePublished: `${pubDatetime?.toISOString()}`,
-  ...(modDatetime && { dateModified: modDatetime.toISOString() }),
+  datePublished: pubDatetime instanceof Date 
+    ? pubDatetime.toISOString() 
+    : new Date().toISOString(), // Ensure valid date
+  ...(modDatetime instanceof Date && { 
+    dateModified: modDatetime.toISOString() 
+  }),
   author: [
     {
       "@type": "Person",
@@ -60,7 +64,14 @@ const structuredData = {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    
     <link rel="canonical" href={canonicalURL} />
     <meta name="generator" content={Astro.generator} />
 
