--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,9 +45,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <p>Welcome to my little corner on the internet – glad you found it!</p>
 
       <p>
-        I’m an engineer turned entrepreneur(hopefully), <a href="https://www.instagram.com/the.josekjames/">creator</a>, and <a href="https://www.linkedin.com/posts/josekjames_coaching-flutter-fluttercommunity-activity-7141786934816718848-HYVW">speaker</a>.
+        I’m an engineer turned entrepreneur, <a href="https://www.instagram.com/the.josekjames/">creator</a>, and <a href="https://www.linkedin.com/posts/josekjames_coaching-flutter-fluttercommunity-activity-7141786934816718848-HYVW">speaker</a>.
         <br />I’m someone who loves experimenting with all kinds of things and
-        is curious about everything on this planet and beyond.
+        who is curious about everything on this planet and beyond.
       </p>
 
       <p>
@@ -69,7 +69,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </ul>
 
       <p>
-        Right now, I’m fully in the <b>entrepreneurship</b> phase. I skipped placements
+        Right now, I’m fully in the <b>entrepreneurship</b> phase. I skipped campus placements
         to jump all in to this world:&gt;
       </p>
 
@@ -79,7 +79,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </p>
 
       <p>
-        Oh, and one thing: Don’t take life and my advice/perspective too
+        Oh, and one thing: Don’t take life or my advice/perspective too
         seriously😉
       </p>
 
