--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <p>Welcome to my little corner on the internet – glad you found it!</p>
 
       <p>
-        I’m an engineer turned entrepreneur, <a href="https://www.instagram.com/the.josekjames/">creator</a>, and <a href="https://www.linkedin.com/posts/josekjames_coaching-flutter-fluttercommunity-activity-7141786934816718848-HYVW">speaker</a>.
+        I’m an engineer turned <a href="https://www.linkedin.com/company/wibe-community">entrepreneur</a>, <a href="https://www.instagram.com/the.josekjames/">creator</a>, and <a href="https://www.linkedin.com/posts/josekjames_coaching-flutter-fluttercommunity-activity-7141786934816718848-HYVW">speaker</a>.
         <br />I’m someone who loves experimenting with all kinds of things and
         who is curious about everything on this planet and beyond.
       </p>
