--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
     
 
-      <p>Welcome to my little corner on the internet – glad you found it!</p>
+      <p>Welcome to my little corner on the internet!</p>
 
       <p>
         I’m an engineer turned <a href="https://www.wibe.so/">entrepreneur</a>, <a href="https://www.instagram.com/the.josekjames/">creator</a>, and <a href="https://www.linkedin.com/posts/josekjames_coaching-flutter-fluttercommunity-activity-7141786934816718848-HYVW">speaker</a>.
@@ -80,7 +80,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
       <p>
         Oh, and one thing: Don’t take life or my advice/perspective too
-        seriously😉
+        seriously:)
       </p>
 
       <p>
